fix user profile page not showing when not logged in

--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 35px;
     background-color: darkorange;
-    width: 1275px;
+    width: 100vw;
     position: sticky;
     top: 0;
     z-index: 42;
