--- a/frontend/src/components/UserProfilePage/UserProfilePage.css
+++ b/frontend/src/components/UserProfilePage/UserProfilePage.css
@@ -8,13 +8,15 @@
     background-color: white;
     min-height: 100vh;
     margin-bottom: -48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .profile-page {
     width: 100%;
     height: 100%;
     margin: auto;
-
 }
 
 .profile-banner {
