--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,4 +68,6 @@ a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	width: 100vw;
 }
+
